--- a/front/src/app/edit-courses/edit-courses.component.css
+++ b/front/src/app/edit-courses/edit-courses.component.css
@@ -10,8 +10,7 @@
   height: 100px;
 }
 .course-box.edit.move {
-  padding-left: 0;
-  padding-right: 0;
+  padding: 20px 50px;
 }
 .add .form-wrap {
   height: auto;
@@ -64,22 +63,14 @@
   opacity: 0;
 }
 .cdk-drag {
-  transition: transform 50ms ease;
-}
-.cdk-drag-animating {
-  transition: transform 200ms ease;
+  will-change: transform;
+  transition: transform 20ms ease;
 }
 .type-wrap.cdk-drop-list-dragging .course-box:not(.cdk-drag-placeholder) {
-  transition: transform 200ms ease;
+  transition: transform 200ms ease-out;
 }
 .type-wrap {
   min-height: 100px;
-}
-.course-box.move {
-  position: relative;
-  background-color: rgba(250,250,250, 0.98);
-  margin-bottom: 15px;
-  display: flex;
 }
 .drag-handle {
   position: absolute;
@@ -89,12 +80,10 @@
 }
 .course-inner-box {
   position: relative;
-  width: calc(100% - 100px);
-  margin-left: auto;
-  margin-right: auto;
 }
 .course-delete-box {
   position: absolute;
+  top: 20px;
   right: 10px;
   width: 40px;
   height: calc(100% - 40px);
@@ -124,9 +113,6 @@
   .course-box.edit {
     padding: 30px;
   }
-  .edit>.course-delete-box, .edit>.drag-handle {
-    height: calc(100% - 60px);
-  }
   .course-box.move {
     background-color: #ffffff;
   }
@@ -141,7 +127,7 @@
   }
 }
 @media only screen and (max-width: 767px) and (hover: hover) {
-  .course-box.move {
+  .course-box.edit.move {
     margin: 10px 0;
   }
 }
@@ -160,12 +146,5 @@
   .course-preview {
     height: 300px;
     max-width: 450px;
-  }
-  .course-delete-box, .drag-handle {
-    height: calc(100% - 20px);
-  }
-  .course-inner-box {
-    display: inline-block;
-    width: calc(100% - 100px);
   }
 }
