--- a/front/src/app/global.css
+++ b/front/src/app/global.css
@@ -16,6 +16,7 @@ a {
   display: inline-block;
   color: #fca500;
   text-decoration: none;
+  cursor: pointer;
 }
 h1 {
   display: inline-block;
@@ -88,6 +89,7 @@ button {
   margin-right: 1em;
   text-align: center;
   transition: background-color 200ms ease, color 200ms ease;
+  cursor: pointer;
 }
 button:disabled {
   background-color: #dedede;
@@ -152,6 +154,7 @@ input.red:focus, textarea.red:focus {
   border: 1px solid rgba(0,0,0,0);
   box-sizing: border-box;
   border-radius: 10px;
+  cursor: pointer;
 }
 .form-wrap {
   border-radius: 0;
