Fixed click area error in Lore Content
The clickable area for the "Description" section is smaller than the actual box (due to padding).

--- a/front/src/app/edit-des/edit-des.component.html
+++ b/front/src/app/edit-des/edit-des.component.html
@@ -2,8 +2,8 @@
   <h1 class="section-title">Mission</h1>
   <div>
     <div>
-      <div class="des-box edit">
-        <div  (click)="expand($event)">
+      <div>
+        <div (click)="expand($event)" class="des-box edit">
           <h1 class="name">Description</h1><br>
           <p class="text first">{{first(des[0])}}</p>
         </div>
